Fix image CSS cropping

--- a/public/sass/partials/_brick-list.scss
+++ b/public/sass/partials/_brick-list.scss
@@ -13,11 +13,13 @@
     width: 400px;
     margin-top: 10px;
     border: 5px solid $color-gallery;
+    max-height: 210px;
+    overflow: hidden;
   }
 
   &__image {
     width: 100%;
-    height: 200px;
+    height: auto;
   }
 
   &__title {
